# SpiPy

./: .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .zenodo.json  CITATION.cff  CLAUDE.md  MANIFEST.in  PYPI_SETUP.md  README.md  callSpeedyInvert.ipynb  callSpeedyInvert.py  environment.yml  postBuild  pyproject.toml  requirements.txt  setup.cfg  setup.py  speedy_invert_p.py  spires.py  spires_core.py  test_dask_method.py  tox.ini
.github/workflows/: build.yml  docs.yml  publish-pypi.yml
.ipynb_checkpoints/: callSpeedyInvert-checkpoint.ipynb
doc/: requirements.txt
doc/source/: conf.py  examples.md  getting_started.md  index.rst  reference.rst
doc/source/_templates/: instance_methods.rst
examples/: .gitignore  04_cloud_masking.ipynb  08_create_animations.ipynb  README.md  Untitled.ipynb  animations.ipynb  callSpeedyInvert.ipynb  cloudless.ipynb  cloudmask.ipynb  cobyla.ipynb  compress_nc.ipynb  example_dask_inversion.py  extract_data.ipynb  invert2d.ipynb  legacy_speedy_invert.ipynb  makeR0.ipynb  make_rois.ipynb  pansharpen.ipynb  speedy_invert_sentinel.ipynb  speedy_invert_sentinel_2.ipynb  test_interpolator.ipynb  test_inversion.ipynb  test_spectrum_diff.ipynb
examples/imgs/: trees.tif
sentinel2/: STAC_query_sentinel2.sh  download_sentinel2.sh  files.txt  import json.py  opengeo_example.ipynb  token.txt
sentinel2/old/: odata-demo.sh
spires/: Makefile  __init__.py  _version.py  cobyla.cpp  interpolator.py  invert.py  legacy.py  process.py  reprojectMODIS.py  spires.cpp  spires.h  spires.i  spires.py  utol.py
tests/: example.py  test_comparison.py  test_example.py  test_legacy.py  test_swig.py
tests/data/: LUT_MODIS.mat  lut_sentinel2b_b2to12_3um_dust.mat  sentinel_r.nc  sentinel_r0.nc
