[versioneer]
VCS = git
style = pep440
versionfile_source = spires/_version.py
versionfile_build = spires/_version.py
tag_prefix = v
parentdir_prefix = spires


[metadata]
name = SpiPy
description = spires
author = Ned Bair
author_email =
url = https://github.com/edwardbair/SpiPy
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/edwardbair/SpiPy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.21.5
    h5py>=3.6.0
    scipy>=1.7.3
    matplotlib>=3.5.1
include_package_data = True

