[versioneer]
VCS = git
style = pep440
versionfile_source = spires/_version.py
versionfile_build = spires/_version.py
tag_prefix = v
parentdir_prefix = spires


[metadata]
name = spires
description = spires
author = Ned Bair
author_email =
url = https://github.com/edwardbair/SpiPy
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/edwardbair/SpiPy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dur =
packages = spires
python_requires = >=3.9
setup_requires = numpy
install_requires =
    numpy
    h5py
    scipy
    rioxarray
    netCDF4
include_package_data = False


[options.extras_require]
dask =
    dask
test =
    numpy
    matplotlib
    pytest
    pytest-cov
docs =
    sphinx 
    sphinx_automodapi 
    sphinx-rtd-theme 
    myst_parser 
    nbsphinx 
    sphinx_markdown_tables 
    pydata_sphinx_theme
